--- a/open-data/package.json
+++ b/open-data/package.json
@@ -16,9 +16,12 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
+    "chart.js": "^3.5.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
