--- a/open-data/package.json
+++ b/open-data/package.json
@@ -20,6 +20,8 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
+    "firebase": "^9.1.0",
+    "lowdb": "^3.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
