--- a/open-data/package.json
+++ b/open-data/package.json
@@ -59,5 +59,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.0"
+  },
+  "engines":{
+    "node":"10.15.1",
+    "npm":"6.4.1"
   }
 }
