--- a/open-data/package.json
+++ b/open-data/package.json
@@ -14,14 +14,20 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.0.2",
+    "@types/lowdb": "^1.0.11",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
+    "concurrently": "^6.3.0",
+    "database-js": "^3.0.11",
+    "database-js-sqlite": "^1.3.0",
     "firebase": "^9.1.0",
+    "json-server": "^0.16.3",
     "lowdb": "^3.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
@@ -37,7 +43,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev-server": "json-server --watch -p 8080 db.json",
+    "dev": "concurrently \"npm start\" \"npm run dev-server\""
   },
   "eslintConfig": {
     "extends": [
@@ -60,8 +68,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.0"
   },
-  "engines":{
-    "node":"10.15.1",
-    "npm":"6.4.1"
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
   }
 }
