--- a/open-data/package.json
+++ b/open-data/package.json
@@ -22,11 +22,7 @@
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "concurrently": "^6.3.0",
-    "database-js": "^3.0.11",
-    "database-js-sqlite": "^1.3.0",
-    "firebase": "^9.1.0",
     "json-server": "^0.16.3",
-    "lowdb": "^3.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
@@ -40,12 +36,14 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+   
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev-server": "json-server --watch -p 8080 db.json",
-    "dev": "concurrently \"npm start\" \"npm run dev-server\""
+    
+    "dev": "(start react-scripts start &&  npm run dev-server)",
+  "start": "npm run dev"
   },
   "eslintConfig": {
     "extends": [
